# sharpness-matters

./: .gitignore  README.md  pyproject.toml  requirements.txt
sharpness_matters.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sharpness_matters/config/: config.yaml  load_config.py
sharpness_matters/pneumonia/datasets/: extract_demographics.py  rsna_pneumonia.py  siim_covid.py
sharpness_matters/pneumonia/evaluation/: compare_cv_tune.py  computational_usage.py  evaluate_kfold.py  evaluate_saliency.py  evaluate_saliency_ood.py  p_value_classification.py  p_value_saliency.py
sharpness_matters/pneumonia/models/: cnn.py
sharpness_matters/pneumonia/train/: train_kfold.py  train_sweep.py
sharpness_matters/pneumonia/utils/: classification_eval.py  saliency_eval.py
sharpness_matters/ptx/datasets/: create_vin_dr_subset.py  extract_demographics.py  ptx498_dataset.py  siim_acr_classification_dataset.py  siim_acr_dataset.py  vin_dataset.py
sharpness_matters/ptx/evaluation/: compare_cv_tune.py  computational_usage.py  evaluate_kfold.py  evaluate_saliency.py  evaluate_saliency_ood.py  p_value_classification.py  p_value_saliency.py
sharpness_matters/ptx/models/: cnn.py
sharpness_matters/ptx/train/: train_kfold.py  train_sweep.py
sharpness_matters/ptx/utils/: classification_eval.py  logging_utils.py  saliency_eval.py
